# shart

./: README.md  ascii_logo.txt  main.py  pyproject.toml
static/: app.js  index.html  share.html  styles.css
